ingressroute.yaml
# 파일명: ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: msa
  annotations:
    # Traefik IngressClass
    kubernetes.io/ingress.class: traefik
#    ingressClassName: traefik

    traefik.ingress.kubernetes.io/router.entrypoints: web


    # 1) 클라이언트가 보내는 이 헤더들을 지워 버림
    traefik.ingress.kubernetes.io/headers-remove-request-headers: "X-User-Id,X-Internal,X-Authenticated"

    # 2) ForwardAuth 설정
    traefik.ingress.kubernetes.io/auth-type: forward
    traefik.ingress.kubernetes.io/auth-url: "http://auth-server.msa.svc.cluster.local:3000/api/v1/auth/validate-token"
    traefik.ingress.kubernetes.io/auth-response-headers: "X-User-Id,X-Internal,X-Authenticated"

spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-server
                port:
                  number: 3000

          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-server
                port:
                  number: 3000

          - path: /api/v1/friends
            pathType: Prefix
            backend:
              service:
                name: user-server
                port:
                  number: 3000
